# jodo

./: .gitignore  README.md  pyproject.toml
jodo/: __init__.py  db.py  main.py
tests/integration_tests/: test_main.py
