[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jodo"
authors = [{ name = "James Falcon", email = "therealfalcon@gmail.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
description = "One CLI to rule them all"
version = "0.3.1"
requires-python = ">=3.10"
dependencies = ["pycloudlib~=1!5.0"]

[project.optional-dependencies]
test = ["pytest", "ruff"]

[project.scripts]
jodo = "jodo.main:main"

[project.urls]
Home = "https://github.com/TheRealFalcon/jodo"

[tool.ruff]
target-version = "py310"
# E, W, and F make up the entirety of default flake8
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "C90",   # mccabe
    "I",     # isort
    "N",     # pep8-naming
    "D",     # pydocstyle
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "TRY",   # tryceratops
    "FLY",   # flynt
    "PERF",  # perflint
    "FURB",  # refurb
    "LOG",   # flake8-logging
    "RUF",   # ruff-specific rules
]
ignore = [
    "ANN101", # Missing type annotation for self in method
    "ANN204", # missing-return-type-special-method
    "EM101",  # raw-string-in-exception
    "S101",   # Use of assert
    "S603",   # subprocess-without-shell-equals-true
    "S607",   # start-process-with-partial-path
]
